refactor: Migrate from Firebase client SDK to Backend API
- Remove Firebase SDK dependency from package.json
- Delete src/firebase-config.ts
- Update Terms.ts to use Backend API endpoints for user agreement
- Update environment configuration to use VITE_API_BASE_URL
- Update documentation (design and developer guide) for new architecture

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@line/liff": "^2.23.1",
-    "firebase": "^12.6.0",
+    "@line/liff": "2.27.3",
     "marked": "^17.0.1"
   },
   "devDependencies": {
