--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,7 @@
 VITE_CHANNEL_ID=YOUR_LIFF_ID
 VITE_CHANNEL_SECRET=YOUR_CHANNEL_SECRET
 VITE_CALLBACK_URL=http://localhost:3000/api/auth/callback/line
+
+# Backend API Configuration
+# URL of the ai-processor service (e.g., Cloud Run URL or local)
+VITE_API_BASE_URL=http://localhost:8080
