--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@line/liff": "2.27.3",
@@ -14,9 +15,13 @@
     "marked": "^17.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.1",
+    "jsdom": "^27.2.0",
     "typescript": "^5.9.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^4.0.14"
   }
 }
