--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Don't cache runtime config
+    location = /env-config.js {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    }
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 30d;
