--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked": "^17.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/dompurify": "^3.0.5",
